--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page.title }}</title>
-  <meta name="description" content="">
+  <meta name="description" content="Patrick O. Perry">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="alternate" type="application/atom+xml" title="Patrick O. Perry" href="http://feeds.feedburner.com/ptrckprry">
 
   <script src="//use.edgefonts.net/source-sans-pro.js"></script>
   <link rel="stylesheet" href="/css/normalize.css">
