Add missing content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <link rel="alternate" type="application/atom+xml" title="Patrick O. Perry" href="http://feeds.feedburner.com/ptrckprry">
 
   <script src="//use.edgefonts.net/source-sans-pro.js"></script>
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/normalize.css?v=2">
   <link rel="stylesheet" href="{{ page.stylesheet }}">
 
   <!--[if lt IE 9]>
