--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-stylesheet: /css/main.css
+stylesheet: /css/main.css?v=1
 ---
 <div id="container" class="{{ page.section }} wrapper">
   <div class="header-container">
