Add courses to menu

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,7 +11,7 @@ stylesheet: /css/main.css?v=1
           <li class="home"   ><a href="/"       >Home</a></li>
           <li class="reports"><a href="/reports">Reports</a></li>
           <li class="code"   ><a href="/code"   >Code</a></li>
-          <li class="blog"   ><a href="/blog"   >Blog</a></li>
+          <li class="courses"><a href="/courses">Courses</a></li>
         </ul>
       </nav>
     </header>
