--- a/_layouts/rscript.html
+++ b/_layouts/rscript.html
@@ -2,7 +2,7 @@
 layout: default
 stylesheet: /css/main.css?v=2
 ---
-<main class="wrapper">
+<main>
 <div class="rscript">
 <article>
   {{ content }}
