--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <script src="//use.edgefonts.net/source-sans-pro.js"></script>
   <link rel="stylesheet" href="/css/normalize.css?v=2">
-  <link rel="stylesheet" href="{{ page.stylesheet }}">
+  <link rel="stylesheet" href="{{ layout.stylesheet }}">
 
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
